preparing to test action
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/docs/action.yaml
+++ b/docs/action.yaml
@@ -88,15 +88,12 @@ runs:
       $cmd
     shell: bash
 
-  - name: Update repository
+  - name: Update Repository
     if: (inputs.dry_run == 'false' || inputs.dry_run == false)
     env:
       GITHUB_TOKEN: ${{ inputs.token }}
+      outdir: ${{ inputs.outdir }}
     run: |
-      echo "Found new version ${version}"
-      echo "::group::${package} package.py"
-      cat packages/${package}/package.py
-      echo "::endgroup::"      
       export BRANCH_FROM="release/${package}-${version}"
       git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
       git branch
@@ -105,13 +102,13 @@ runs:
       git config --global user.name "github-actions"
       git config --global user.email "github-actions@users.noreply.github.com"
       git config --global pull.rebase true
-      git add packages/*
+      git add ${outdir}/*
       if git diff-index --quiet HEAD --; then
           printf "No changes\n"
       else
          printf "Changes\n"
          today=$(date '+%Y-%m-%d')
-         git commit -a -m "Automated deployment to update ${package} versions ${today}" -m "Signed-off-by: github-actions <github-actions@users.noreply.github.com>"  
+         git commit -a -m "Automated deployment to update release notes ${today}" -m "Signed-off-by: github-actions <github-actions@users.noreply.github.com>"  
          git push origin "${BRANCH_FROM}"
       fi
       echo "PULL_REQUEST_FROM_BRANCH=${BRANCH_FROM}" >> $GITHUB_ENV
