remove extra quotes around author
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/docs/action.yaml
+++ b/docs/action.yaml
@@ -68,7 +68,7 @@ runs:
           cmd="${cmd} --start-at ${start_at}"
       fi
       if [[ "${author}" != "" ]]; then
-          cmd="${cmd} --author \"${author}\""
+          cmd="${cmd} --author ${author}"
       fi
       if [[ "${categories}" != "" ]]; then
           cmd="${cmd} --categories '${categories}'"
