--- a/docs/action.yaml
+++ b/docs/action.yaml
@@ -109,7 +109,7 @@ runs:
     shell: bash
 
   - name: Open Pull Request
-    if: (env.PULL_REQUEST_OPEN = '1')
+    if: (env.PULL_REQUEST_OPEN == '1')
     uses: vsoch/pull-request-action@c8e84cea4c91c3379be16bc011c195edd3abbb2d # 1.0.23
     env:
       GITHUB_TOKEN: ${{ inputs.token }}
